@@ -1,7 +1,6 @@
 package com.wonderprints.isomorphic.react.renderer;
 
-import jdk.nashorn.api.scripting.NashornScriptEngine;
-import lombok.val;
+import org.openjdk.nashorn.api.scripting.NashornScriptEngine;
 import javax.script.ScriptContext;
 import javax.script.ScriptEngineManager;
 import javax.script.ScriptException;
@@ -13,9 +12,9 @@ import java.util.concurrent.Executors;
 public class React {
 
     private ThreadLocal<NashornScriptEngine> engineHolder = ThreadLocal.withInitial(() -> {
-        val nashornScriptEngine = (NashornScriptEngine) new ScriptEngineManager().getEngineByName("nashorn");
-        val globalScheduledThreadPool = Executors.newScheduledThreadPool(20);
-        val ctx = new SimpleScriptContext();
+        NashornScriptEngine nashornScriptEngine = (NashornScriptEngine) new ScriptEngineManager().getEngineByName("nashorn");
+        java.util.concurrent.ScheduledExecutorService globalScheduledThreadPool = Executors.newScheduledThreadPool(20);
+        SimpleScriptContext ctx = new SimpleScriptContext();
         ctx.setAttribute("__NASHORN_POLYFILL_TIMER__", globalScheduledThreadPool, ScriptContext.ENGINE_SCOPE);
         ctx.setAttribute("__HTTP_SERVLET_REQUEST__", globalScheduledThreadPool, ScriptContext.ENGINE_SCOPE);
         nashornScriptEngine.setContext(ctx);
@@ -30,7 +29,7 @@ public class React {
 
     public String render(String initialState, String request) {
         try {
-            val html = engineHolder.get().invokeFunction("render", initialState, request);
+            Object html = engineHolder.get().invokeFunction("render", initialState, request);
             return String.valueOf(html);
         }
         catch (Exception e) {
@@ -39,7 +38,7 @@ public class React {
     }
 
     private Reader read(String path) {
-        val in = getClass().getClassLoader().getResourceAsStream(path);
+        java.io.InputStream in = getClass().getClassLoader().getResourceAsStream(path);
         return new InputStreamReader(in);
     }
 }
